test/bad/rep0.pacc
/*
nopacc 5:10 'expected NameStart:c:0'
*/

S <- .**
